@@ -56,7 +56,7 @@
   <keycap>C+o</keycap>
   </entry>
   <entry>
-  Refers to pressing and holding the <keycap>Control</keycap> key, pressing and releasing <keycap>O</keycap>, and finally releasing the <keycap>Control</keycap> key again.
+  Refers to pressing and holding the <keycap>Control</keycap> key, pressing and releasing <keycap>O</keycap>, and finally releasing the <keycap>Control</keycap> key.
   </entry>
   </row>
   <row>
